scss + scrollbar fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,7 @@ body {
     background-color: #120B35;
     // max-width: 1440px;
     // width: 100%;
-    overflow-x: hidden;
+    overflow: auto;
     font-family: 'Roboto Mono';
     margin: 0;
     // padding: 0;
@@ -17,26 +17,31 @@ html {
     display: flex;
     justify-content: center;
     scroll-behavior: smooth;
+    // overflow-x: hidden;
     // margin: 0;
     // padding: 0;
     // height: 100%;
 }
 
 ::-webkit-scrollbar {
-    width: 15px;
+  display: none; /* Versteckt die Scrollbar */
 }
+
+// ::-webkit-scrollbar {
+//     width: 15px;
+// }
   
-::-webkit-scrollbar-track {
-    background: #f1f1f1;
-}
+// ::-webkit-scrollbar-track {
+//     background: #f1f1f1;
+// }
   
-::-webkit-scrollbar-thumb {
-    background: #02F4BF;
-}
+// ::-webkit-scrollbar-thumb {
+//     background: #02F4BF;
+// }
   
-::-webkit-scrollbar-thumb:hover {
-    background: #0F6675;
-}
+// ::-webkit-scrollbar-thumb:hover {
+//     background: $primaryColorOne;
+// }
 
 /* handjet-regular - latin */
 @font-face {
@@ -128,31 +133,15 @@ html {
     font-family: 'Roboto Mono';
 }
 
-// @media (min-width: 1441px) {
-
-//   html {
-//     display: flex;
-//     justify-content: center;
-//   }
-
-// }
-
-@media (max-width: 390px) {
+@media only screen and (max-width: 540px) {
 
   html, body {
-    overflow-x: hidden; /* Verhindert horizontales Scrollen */
-    overflow-y: auto;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-  }
-
-  ::-webkit-scrollbar {
-    width: 0;
-    height: 0;
-  }
+    overflow-x: hidden;
+}
 
 }
+
+
+
 
 
